# opencl-learn

./: README.md
add_vectors/: CMakeLists.txt  add_vectors.cl  main.cpp
dot_product/: CMakeLists.txt  dot.cl  main.cpp
hello/: CMakeLists.txt  main.cpp
hello_v2/: CMakeLists.txt  functions.cpp  functions.h  hello.cl  main.cpp
info/: CMakeLists.txt  main.cpp
ndRange/: CMakeLists.txt  main.cpp  ndRange.cl
pinned/: CMakeLists.txt  main.cpp  sum.cl
reduction/: CMakeLists.txt  main.cpp  reduction.cl
